# marketer

./: .env.example  .gitignore  Dockerfile  FINAL_ANALYSIS.md  Makefile  PROJECT_REVIEW.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_phase2_phase3_features.py
app/: __init__.py  config.py  main.py
app/api/v1/: analytics.py  batches.py  images.py  teams.py  templates.py  users.py  videos.py  webhooks.py
app/core/: database.py  dependencies.py  security.py
app/models/: __init__.py  analytics.py  batch.py  job.py  quota.py  team.py  template.py  usage.py  user.py  webhook.py
app/schemas/: __init__.py  batch.py  image.py  team.py  template.py  user.py  video.py  webhook.py
app/services/: analytics_service.py  batch_service.py  cost_calculator.py  image_service.py  quota_service.py  storage_service.py  team_service.py  template_service.py  video_service.py  webhook_service.py
app/services/providers/: __init__.py  base.py  gemini.py  imagen.py  openai.py  sora.py  veo.py
app/workers/: __init__.py  batch_worker.py  celery_app.py  image_worker.py  video_worker.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/dashboard/: header.tsx  (+1 more)
frontend/lib/: api.ts  store.ts
scripts/: init-minio.py
tests/: __init__.py  conftest.py  test_api.py  test_services.py
(+11 files in other folders)
